
  From Adam Simpkins:

  - Add a --interactive option that starts a session for building (or
    cleaning) targets without re-reading the SConscript files every time.

  - Fix use of readline command-line editing in --interactive mode.

  - Have the --interactive mode "build" command with no arguments
    build the specified Default() targets.

  From Ben Webb:

  - Support the SWIG %module statement with following modifiers in
    parenthese (e.g., '%module(directors="1")').



RELEASE 0.97.0d20071212 - Wed, 12 Dec 2007 09:29:32 -0600

  From Benoit Belley:

  - Fix occasional spurious rebuilds and inefficiency when using
    --implicit-cache and Builders that produce multiple targets.

  - Allow SCons to not have to know about the builders of generated
    files when BuildDir(duplicate=0) is used, potentially allowing some
    SConscript files to be ignored for smaller builds.

  From David Cournapeau:

  - Add a CheckTypeSize() call to configure contexts.

  From Ken Deeter:

  - Make the "contents" of Alias Nodes a concatenation of the children's
    content signatures (MD5 checksums), not a concatenation of the
    children's contents, to avoid using large amounts of memory during
    signature calculation.

  From Malte Helmert:

  - Fix a lot of typos in the man page and User's Guide.

  From Geoffrey Irving:

  - Speed up conversion of paths in .sconsign files to File or Dir Nodes.

  From Steven Knight:

  - Add an Options.UnknownOptions() method that returns any settings
    (from the command line, or whatever dictionary was passed in)
    that aren't known to the Options object.

  - Add a Glob() function.

  - When removing targets with the -c option, use the absolute path (to
    avoid problems interpreting BuildDir() when the top-level directory
    is the source directory).

  - Fix problems with Install() and InstallAs() when called through a
    clone (of a clone, ...) of a cloned construction environment.
